shim/shim.h

    /* Opaque types — defined in the vendored bmesh headers. */
    typedef struct BMesh BMesh;
    typedef struct BMVert BMVert;
    typedef struct BMEdge BMEdge;
    typedef struct BMLoop BMLoop;
    typedef struct BMFace BMFace;
    /* Common header shared by every BM element; used as a type-erased
     * element-pointer in mixed vert/edge/face buffers. */
    typedef struct BMHeader BMHeader;
    /* Element counts. */
    int bms_totvert(BMesh *bm);
    int bms_totedge(BMesh *bm);
    int bms_totface(BMesh *bm);
    int bms_totloop(BMesh *bm);
    /* Number of looptri triples produced by `bms_mesh_calc_tessellation`
     * for the current mesh. Equals `totloop - 2 * totface` (the standard
     * polygon-to-triangle count). Returns 0 for an empty mesh. */
    int bms_mesh_calc_looptri_count(BMesh *bm);
    /* Compute the per-face render-time tessellation: for each face emit
     * `face.len - 2` triples of loops pointing into the face's existing
     * loop cycle. Writes exactly `bms_mesh_calc_looptri_count(bm)` triples
     * into `out_tris`, which the caller must pre-allocate. The mesh itself
     * is not modified. */
    void bms_mesh_calc_tessellation(BMesh *bm, BMLoop *(*out_tris)[3]);
    /* Destructively triangulate a single face in place. Wraps BMesh's
     * `BM_face_triangulate` along with the temporary MemArena (and, for
     * `MOD_TRIANGULATE_NGON_BEAUTY`, the BLI Heap) that it requires.
     *
     * `quad_method` is one of the BMS_TRIANGULATE_QUAD_* values (matches
     * `MOD_TRIANGULATE_QUAD_*`); `ngon_method` is one of the
     * BMS_TRIANGULATE_NGON_* values (matches `MOD_TRIANGULATE_NGON_*`).
     *
     * If `r_faces_new` is non-null, it must point to a caller-allocated
     * buffer sized for at least `f->len - 3` entries, and
     * `*r_faces_new_tot` must equal `f->len - 3` on entry. After the call,
     * `*r_faces_new_tot` holds the number of newly-created faces actually
     * written (may be less than `f->len - 3` if some target triangles
     * already existed in the mesh). Both pointers may be null when the
     * caller doesn't need the new-face list. */
    void bms_face_triangulate(BMesh *bm,
                              BMFace *f,
                              int quad_method,
                              int ngon_method,
                              bool use_tag,
                              BMFace **r_faces_new,
                              int *r_faces_new_tot);
    /* Snapshot the mesh into flat buffers. The caller pre-sizes the verts/edges/
     * face_offsets/face_lens buffers using the tot* counts (verts: tot*3 floats,
     * edges: tot*2 ints, face_offsets/face_lens: tot ints). face_verts_cap should
     * be the sum of all face lengths (caller can call bms_snapshot once with a
     * generous estimate; returns false if too small). */
    bool bms_snapshot(BMesh *bm,
                      float *out_verts, int out_verts_cap,
                      int *out_edges, int out_edges_cap,
                      int *out_face_offsets, int out_face_offsets_cap,
                      int *out_face_verts, int out_face_verts_cap,
                      int *out_face_lens, int out_face_lens_cap);
    /* ---- Customdata layer access. ---- */
    /* `domain` is one of: 0=vert, 1=edge, 2=loop, 3=face. */
    /* `type` is an eCustomDataType value (CD_PROP_FLOAT=10, CD_PROP_INT32=11, */
    /*  CD_PROP_FLOAT2=49, CD_PROP_FLOAT3=48, CD_PROP_COLOR=47 etc.). */
    /* Returns the layer's byte offset inside a per-element CD block, or -1   */
    /* on error. */
    int bms_layer_add_named(BMesh *bm, int domain, int type, const char *name);
    /* Invoke BMesh's general-purpose `delete` operator on a mixed element
     * buffer. `geom` is a type-erased buffer of `geom_len` BMHeader*
     * pointers (any mix of verts / edges / faces, since BMHeader is the
     * first field of every element). `context` selects which incident
     * geometry the operator removes; it is the operator's `context` enum
     * int, with these values:
     *
     *   1 = VERTS                — delete verts and all geometry using them.
     *   2 = EDGES                — delete edges and all faces using them.
     *   3 = FACES_ONLY           — delete only the faces themselves.
     *   4 = EDGES_FACES          — delete edges and their faces.
     *   5 = FACES                — delete faces and any verts/edges left
     *                              unused afterwards.
     *   6 = FACES_KEEP_BOUNDARY  — like FACES, but keep edges on the
     *                              boundary of the removed region.
     *   7 = TAGGED_ONLY          — delete only the tagged elements in the
     *                              buffer, leaving incident geometry.
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_delete_geom(BMesh *bm, BMHeader **geom, int geom_len, int context);
    /* Invoke BMesh's `weld_verts` operator, welding each source vert onto a
     * target vert.
     *
     * `pairs` is a flat array of `2 * pairs_len` BMVert* laid out as
     * consecutive (src, tar) couples: `pairs[2*i]` is the source vert welded
     * onto target `pairs[2*i+1]`. Each couple is inserted into the operator's
     * `targetmap` mapping slot (source vert as map key, target vert as mapped
     * value). `pairs` may be null with `pairs_len == 0` for an empty input.
     *
     * `use_centroid` sets the operator's `use_centroid` bool slot: when true
     * each merged group settles at the centroid of its members, otherwise the
     * group adopts the target vert's position.
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_weld_verts(BMesh *bm, BMVert **pairs, int pairs_len, bool use_centroid);
    /* Invoke BMesh's `find_doubles` operator, which detects groups of
     * coincident verts within `dist` and produces a vert -> vert merge map
     * *without* modifying topology.
     *
     * Inputs map 1:1 onto the operator's slots:
     *   - `verts` / `verts_len`           — the BMVert* set to search. May
     *                                       be null with `verts_len == 0`.
     *   - `keep_verts` / `keep_len`       — verts that must never be merged
     *                                       away; verts outside this set can
     *                                       only merge onto a vert inside it.
     *                                       May be null with `keep_len == 0`.
     *   - `dist`                          — maximum merge distance.
     *   - `use_connected`                 — restrict pairing to verts joined
     *                                       by existing topology.
     *
     * On success the operator's `targetmap.out` MAP_ELEM slot holds one entry
     * per merged source vert (key = source BMVert*, value = target BMVert*).
     * Each entry is written to `out_pairs` as a flat (src, tar) couple:
     * `out_pairs[2*i]` is the source vert, `out_pairs[2*i+1]` its target.
     * At most `out_cap` couples are written.
     *
     * Returns the total number of map entries, which may exceed `out_cap`
     * (only the first `out_cap` couples are written in that case, so callers
     * can detect truncation), or -1 if BMO_op_initf rejected the input. */
    int bms_find_doubles(BMesh *bm,
                         BMVert **verts, int verts_len,
                         BMVert **keep_verts, int keep_len,
                         float dist, bool use_connected,
                         BMVert **out_pairs, int out_cap);
    /* Invoke BMesh's `remove_doubles` operator, which detects groups of
     * coincident verts within `dist` (reusing the same clustering as
     * `find_doubles`) and then welds each group in place with
     * `use_centroid = false`, collapsing the topology. The mesh is mutated
     * directly; there is no output slot to read back, so callers inspect the
     * mesh afterwards.
     *
     * Inputs map onto the operator's slots:
     *   - `verts` / `verts_len`           — the BMVert* set to search. May
     *                                       be null with `verts_len == 0`.
     *   - `dist`                          — maximum merge distance.
     *   - `use_connected`                 — restrict pairing to verts joined
     *                                       by existing topology.
     *
     * `keep_verts` / `keep_len` describe verts that must survive a merge.
     * The `remove_doubles` operator exposes no `keep_verts` slot of its own,
     * so these are accepted for signature parity with `bms_find_doubles` but
     * are not forwarded; pass null with `keep_len == 0`.
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_remove_doubles(BMesh *bm,
                            BMVert **verts, int verts_len,
                            BMVert **keep_verts, int keep_len,
                            float dist, bool use_connected);
    /* Invoke BMesh's `pointmerge` operator, which moves every input vert onto
     * the position `merge_co` and welds the whole set together onto a single
     * survivor (the first vert in the input buffer), collapsing the topology.
     * The mesh is mutated directly; there is no output slot to read back.
     *
     * Inputs map onto the operator's slots:
     *   - `verts` / `verts_len`           — the BMVert* set to merge. May be
     *                                       null with `verts_len == 0`.
     *   - `merge_co`                       — the float[3] target position all
     *                                       input verts are moved to.
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_pointmerge(BMesh *bm,
                        BMVert **verts, int verts_len,
                        const float merge_co[3]);
    /* Invoke BMesh's `dissolve_limit` operator (a.k.a. "limited dissolve") on
     * the supplied edge + vert sets. Greedy heap-driven planar / co-linear
     * dissolve: every candidate whose dihedral angle stays within
     * `angle_limit` (radians) is dissolved, subject to the `delimit` bitmask
     * which prevents dissolving across selected boundaries.
     *
     * Parameters map 1:1 onto the operator's slots:
     *
     *   - `angle_limit`              — maximum dihedral angle (radians)
     *                                  between adjacent face normals for
     *                                  edge dissolve, and between the two
     *                                  remaining edges for vert dissolve.
     *                                  BMesh internally clamps this to
     *                                  `pi/2`; this shim forwards the
     *                                  caller's value verbatim.
     *   - `use_dissolve_boundaries`  — also dissolve verts that lie on a
     *                                  mesh boundary (i.e. between exactly
     *                                  two wire / boundary edges).
     *   - `delimit`                  — bitmask of edge attributes that
     *                                  block dissolve across them. Bits:
     *                                    BMS_DELIM_NORMAL   = 1 << 0
     *                                    BMS_DELIM_MATERIAL = 1 << 1
     *                                    BMS_DELIM_SEAM     = 1 << 2
     *                                    BMS_DELIM_SHARP    = 1 << 3
     *                                    BMS_DELIM_UV       = 1 << 4
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    enum
    {
        BMS_DELIM_NORMAL = 1 << 0,
        BMS_DELIM_MATERIAL = 1 << 1,
        BMS_DELIM_SEAM = 1 << 2,
        BMS_DELIM_SHARP = 1 << 3,
        BMS_DELIM_UV = 1 << 4,
    };
    bool bms_dissolve_limit(BMesh *bm,
                            BMEdge **edges, int edges_len,
                            BMVert **verts, int verts_len,
                            float angle_limit,
                            bool use_dissolve_boundaries,
                            int delimit);