src/lib.rs


    /// Invoke BMesh's general-purpose `delete` BMOP on a mixed element
    /// buffer.
    ///
    /// `geom` points to a buffer of `geom_len` type-erased element
    /// pointers ([`BMHeader`]); any mix of vert / edge / face pointers may
    /// be cast to `*mut BMHeader` since the header is the first field of
    /// every element. The buffer may be null only when `geom_len` is zero.
    /// Element pointers must remain valid for the duration of the call.
    ///
    /// `context` is the operator's `context` enum int selecting which
    /// incident geometry is removed:
    /// - `1` VERTS — verts plus all geometry using them.
    /// - `2` EDGES — edges plus all faces using them.
    /// - `3` FACES_ONLY — only the faces themselves.
    /// - `4` EDGES_FACES — edges and their faces.
    /// - `5` FACES — faces plus verts/edges left unused afterwards.
    /// - `6` FACES_KEEP_BOUNDARY — like FACES but keep boundary edges of
    ///   the removed region.
    /// - `7` TAGGED_ONLY — only the elements in the buffer, leaving
    ///   incident geometry.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_delete_geom(
        bm: *mut BMesh,
        geom: *mut *mut BMHeader,
        geom_len: c_int,
        context: c_int,
    ) -> bool;

    /// Invoke BMesh's `weld_verts` BMOP, welding each source vert onto a
    /// target vert.
    ///
    /// `pairs` points to a flat buffer of `2 * pairs_len` [`BMVert`]
    /// pointers laid out as consecutive `(src, tar)` couples: `pairs[2*i]`
    /// is the source vert welded onto target `pairs[2*i+1]`. Each couple
    /// populates one entry of the operator's `targetmap` mapping slot
    /// (source as map key, target as mapped value). `pairs` may be null
    /// only when `pairs_len` is zero. Element pointers must remain valid
    /// for the duration of the call.
    ///
    /// `use_centroid` forwards the operator's `use_centroid` bool slot:
    /// when true each merged group settles at the centroid of its members,
    /// otherwise the group adopts the target vert's position.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_weld_verts(
        bm: *mut BMesh,
        pairs: *mut *mut BMVert,
        pairs_len: c_int,
        use_centroid: bool,
    ) -> bool;

    /// Run BMesh's `find_doubles` operator: detect groups of verts within
    /// `dist` and build a vert -> vert merge map without modifying topology.
    ///
    /// `verts` / `keep_verts` are arrays of `*mut BMVert` of length
    /// `verts_len` / `keep_len`; either may be null only when its length is
    /// zero. Verts outside `keep_verts` can only merge onto a vert inside it.
    /// Element pointers must remain valid for the duration of the call.
    ///
    /// On return, the `targetmap.out` map is written into `out_pairs` as flat
    /// `(src, tar)` couples: `out_pairs[2*i]` is the source vert,
    /// `out_pairs[2*i+1]` its target. `out_pairs` must point to at least
    /// `2 * out_cap` writable `*mut BMVert` slots.
    ///
    /// Returns the total number of map entries. When that exceeds `out_cap`,
    /// only the first `out_cap` couples are written, so a return value greater
    /// than `out_cap` signals truncation. Returns -1 if the operator rejected
    /// the input.
    pub fn bms_find_doubles(
        bm: *mut BMesh,
        verts: *mut *mut BMVert,
        verts_len: c_int,
        keep_verts: *mut *mut BMVert,
        keep_len: c_int,
        dist: f32,
        use_connected: bool,
        out_pairs: *mut *mut BMVert,
        out_cap: c_int,
    ) -> c_int;

    /// Run BMesh's `remove_doubles` operator: detect groups of verts within
    /// `dist` and weld each group in place, mutating the mesh's topology.
    /// There is no output map; inspect the mesh after the call.
    ///
    /// `verts` is an array of `*mut BMVert` of length `verts_len`; it may be
    /// null only when `verts_len` is zero. `dist` and `use_connected` control
    /// the merge distance and whether pairing is restricted to connected
    /// geometry. Element pointers must remain valid for the duration of the
    /// call.
    ///
    /// `keep_verts` / `keep_len` are accepted for signature parity with
    /// [`bms_find_doubles`]; the operator has no keep-verts slot, so they are
    /// not forwarded. Pass null with `keep_len` zero.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_remove_doubles(
        bm: *mut BMesh,
        verts: *mut *mut BMVert,
        verts_len: c_int,
        keep_verts: *mut *mut BMVert,
        keep_len: c_int,
        dist: f32,
        use_connected: bool,
    ) -> bool;

    /// Run BMesh's `pointmerge` operator: move every input vert onto
    /// `merge_co` and weld the set together onto a single survivor (the first
    /// input vert), mutating the mesh's topology in place. There is no output
    /// map; inspect the mesh after the call.
    ///
    /// `verts` is an array of `*mut BMVert` of length `verts_len`; it may be
    /// null only when `verts_len` is zero. `merge_co` must point to three
    /// readable `f32` (the target position); its contents are copied and left
    /// unmodified. Element pointers must remain valid for the duration of the
    /// call.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_pointmerge(
        bm: *mut BMesh,
        verts: *mut *mut BMVert,
        verts_len: c_int,
        merge_co: *const f32,
    ) -> bool;
}

// ---- Delimit bits for `bms_dissolve_limit` ----
//
// Bitmask values matching BMesh's `BMO_Delimit` enum. Combine with `|`.
pub const BMS_DELIM_NORMAL: c_int = 1 << 0;
pub const BMS_DELIM_MATERIAL: c_int = 1 << 1;
pub const BMS_DELIM_SEAM: c_int = 1 << 2;
pub const BMS_DELIM_SHARP: c_int = 1 << 3;
pub const BMS_DELIM_UV: c_int = 1 << 4;

// ---- Counts ----

unsafe extern "C" {
    pub fn bms_totvert(bm: *mut BMesh) -> c_int;
    pub fn bms_totedge(bm: *mut BMesh) -> c_int;
    pub fn bms_totface(bm: *mut BMesh) -> c_int;
    pub fn bms_totloop(bm: *mut BMesh) -> c_int;
}

// ---- Render-time tessellation ----
//
// `bms_mesh_calc_tessellation` fills a caller-allocated buffer with
// `bms_mesh_calc_looptri_count(bm)` triples of `[*mut BMLoop; 3]`,
// where each triple references three loops of an existing face in the
// mesh. The mesh itself is not modified. Each face contributes
// `face.len - 2` consecutive triples; the per-face order matches BMesh's
// internal iteration order (`BM_ITER_MESH(BM_FACES_OF_MESH)`).

unsafe extern "C" {
    /// Number of looptri triples produced by `bms_mesh_calc_tessellation`
    /// on the current mesh. Equals `totloop - 2 * totface`. Returns 0 for
    /// an empty mesh.
    pub fn bms_mesh_calc_looptri_count(bm: *mut BMesh) -> c_int;

    /// Compute render-time looptri tessellation. `out_tris` must point to
    /// a buffer of at least `bms_mesh_calc_looptri_count(bm)` triples,
    /// each a `[*mut BMLoop; 3]`. The buffer is overwritten in place; the
    /// mesh is not modified.
    pub fn bms_mesh_calc_tessellation(bm: *mut BMesh, out_tris: *mut [*mut BMLoop; 3]);
}

// ---- Destructive per-face triangulation ----
//
// `bms_face_triangulate` triangulates a single face in place. The five
// `BMS_TRIANGULATE_QUAD_*` values select the diagonal for a quad input;
// the two `BMS_TRIANGULATE_NGON_*` values select the algorithm for an
// n-gon input. The integer values are part of the FFI contract and must
// match the BMesh-side `MOD_TRIANGULATE_QUAD_*` / `MOD_TRIANGULATE_NGON_*`
// enums.

/// Quad diagonal: pick the diagonal that maximises a "beauty" metric.
pub const BMS_TRIANGULATE_QUAD_BEAUTY: c_int = 0;
/// Quad diagonal: always use the (0, 2) diagonal.
pub const BMS_TRIANGULATE_QUAD_FIXED: c_int = 1;
/// Quad diagonal: alternate between (0, 2) and (1, 3) per face.
pub const BMS_TRIANGULATE_QUAD_ALTERNATE: c_int = 2;
/// Quad diagonal: pick the shorter of the two diagonals.
pub const BMS_TRIANGULATE_QUAD_SHORTEDGE: c_int = 3;
/// Quad diagonal: pick the longer of the two diagonals.
pub const BMS_TRIANGULATE_QUAD_LONGEDGE: c_int = 4;

/// N-gon algorithm: polyfill followed by edge-flip beautification.
pub const BMS_TRIANGULATE_NGON_BEAUTY: c_int = 0;
/// N-gon algorithm: simple ear-clipping (no beautification pass).
pub const BMS_TRIANGULATE_NGON_EARCLIP: c_int = 1;

unsafe extern "C" {
    /// Triangulate a single face in place. `quad_method` and `ngon_method`
    /// must be one of the `BMS_TRIANGULATE_QUAD_*` / `BMS_TRIANGULATE_NGON_*`
    /// constants.
    ///
    /// When `r_faces_new` is non-null, it must point to a caller-allocated
    /// buffer of at least `f.len - 3` `*mut BMFace` slots and
    /// `*r_faces_new_tot` must be set to `f.len - 3` on entry. On return,
    /// `*r_faces_new_tot` holds the count of new faces actually written
    /// (less than `f.len - 3` if some target triangles coincided with
    /// faces already in the mesh).
    ///
    /// Both `r_faces_new` and `r_faces_new_tot` may be null when the new-face
    /// list is not needed. `use_tag` causes the new faces and edges to be
    /// marked with `BM_ELEM_TAG`.
    pub fn bms_face_triangulate(
        bm: *mut BMesh,
        f: *mut BMFace,
        quad_method: c_int,
        ngon_method: c_int,
        use_tag: bool,
        r_faces_new: *mut *mut BMFace,
        r_faces_new_tot: *mut c_int,
    );
}

// ---- Snapshot: flat-buffer mesh export ----
//
// Caller pre-sizes the buffers via the tot* functions, then calls bms_snapshot
// to fill them in. Returns false if any buffer was too small. Buffer layout:
//
//   out_verts: 3 f32 per vertex
//   out_edges: 2 vertex-index per edge
//   out_face_offsets: 1 i32 per face — index into out_face_verts of that face's first vert
//   out_face_verts: face vertex indices, concatenated
//
// Vertex indices in the returned arrays are dense (assigned 0..tot_vert in
// the order vertices appear in `BM_ITER_MESH(BM_VERTS_OF_MESH)`).

unsafe extern "C" {
    pub fn bms_snapshot(
        bm: *mut BMesh,
        out_verts: *mut f32,
        out_verts_cap: c_int,
        out_edges: *mut c_int,
        out_edges_cap: c_int,
        out_face_offsets: *mut c_int,
        out_face_offsets_cap: c_int,
        out_face_verts: *mut c_int,
        out_face_verts_cap: c_int,
        out_face_lens: *mut c_int,
        out_face_lens_cap: c_int,
        // Optional: pass null + 0 to skip; otherwise must be totface*3 floats.
        out_face_normals: *mut f32,
        out_face_normals_cap: c_int,
    ) -> bool;

    /// Walks all faces and calls `BM_face_normal_update` on each. Does NOT
    /// recompute vertex normals (bmesh's full mesh-normals-update pulls in
    /// task-parallel machinery we don't stub); the comparison harness only
    /// inspects face normals.
    pub fn bms_mesh_normals_update(bm: *mut BMesh);
}

// ---- Customdata layer access ----

/// CD layer-type constants. These mirror Blender's `eCustomDataType` integer
/// values directly.
#[repr(i32)]
pub enum CdType {
    /// `CD_PROP_FLOAT`
    Float = 10,
    /// `CD_PROP_INT32`
    Int32 = 11,
    /// `CD_PROP_COLOR` — 4× `f32`.
    Color = 47,
    /// `CD_PROP_FLOAT3`
    Float3 = 48,
    /// `CD_PROP_FLOAT2`
    Float2 = 49,
}

#[repr(i32)]
pub enum BmsDomain {
    Vert = 0,
    Edge = 1,
    Loop = 2,
    Face = 3,
}

unsafe extern "C" {
    /// Register a named CD layer on `domain`. Returns the byte offset of
    /// the new layer inside an element's CD block, or `-1` on error.
    pub fn bms_layer_add_named(
        bm: *mut BMesh,
        domain: c_int,
        type_: c_int,
        name: *const std::os::raw::c_char,
    ) -> c_int;
